[package]
name = "borg-prometheus-exporter"
version = "1.2.1"
edition = "2018"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
license = "MPL-2.0"
description = "A Prometheus exporter for borg repositories"
repository = "https://github.com/Sciencentistguy/borg-prometheus-exporter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.2.0"
chrono = "0.4.19"
clap = "2.34.0"
eyre = "0.6.5"
once_cell = "1.9.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serde_yaml = "0.8.23"
structopt = "0.3.25"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
warp = "0.3.2"
